==> ThBreuer/EmbSysLib/Src/Hardware/MCU/ATmega32u4/Src/USBdevice_Mcu.cpp <==
#include "USBdevice_Mcu.h"
#include "Hardware/MCU/System.h"
#include "Hardware/ReportID_Hw.h"

void USBdevice_Mcu::start(void)
{
  // Basic USB activation necessary to trigger a wakeup interrupt
  // Wakeup ISR will start PLL clock, then USB-END-OF-RESET interrupts are recognized
  UHWCON = ( (1<<UVREGE) );

  USBCON = (  (1<<USBE) 
            | (1<<OTGPADE) 
            | (1<<FRZCLK) );

  asm volatile ("nop"); // nop may be are necessary if mpu is clocked with 16 MHz (deactivated prescaler)
  asm volatile ("nop");
  
  if (0) // 1:lowspeed) 
    UDCON = (1<<LSM);

  USBCON = (  (1<<USBE) 
            | (1<<OTGPADE));

  UDIEN = (  (1<<WAKEUPE) 
           | (1<<EORSTE )
           | (1<<SUSPE  ));

  UDCON &= ~(1<<DETACH); // USB attach
}

void USBdevice_Mcu::setAddress( BYTE adr )
{
  if( adr) 
 {
 
  UDADDR = adr & 0x7F;
  UEINTX &= ~(1<<TXINI);
  while (!(UEINTX & (1<<TXINI))); 
  UDADDR |= (1<<ADDEN);
 }
}

void USBdevice_Mcu::configEP (BYTE epAddr, WORD epMaxPacketSize, BYTE epType) 
{
  BYTE epTmp = UENUM;

  UENUM = epAddr & 0x0F;
  UECONX = (1<<EPEN);

  BYTE type;  

  switch( epType )
  {
    case USBdeviceDescriptor::Endpoint::BULK:       type = 2; break;
    case USBdeviceDescriptor::Endpoint::INTERRUPT:  type = 3; break;
    default:
      report.error( ReportID_Hw::Event::CONFIG_NOT_SUPPORTED );
  }

  if( epAddr & 0x7F )
  {
    nak[epAddr & 0x7F] = false; ///// in CDC: = true;  ???
  }

  if(epAddr & 0x80) // IN Endpopint
  {
    UECFG0X = (  (type << 6) // Endpoint Type = Interrupt
               | (0x01));    // Direction = IN

    UECFG1X = (  (0x02 << 4) // Endpoint Size = 64 bytes
               | (0x00 << 2)); // Endpoint Bank = One bank

    UECFG1X |= (1 << ALLOC); // Enpoint Allocation = allocate

    UEIENX  |= (1<<TXINE)|(1<<NAKINE);

  }
  else // OUT Endpoint
  {
    UECFG0X = (  (type << 6) // Endpoint Type = Interrupt
               | (0x00));    // Direction = OUT

    UECFG1X = (  (0x02 << 4) // Endpoint Size = 64 bytes
               | (0x00 << 2)); // Endpoint Bank = One bank

    UECFG1X |= (1 << ALLOC); // Enpoint Allocation = allocate

    UEIENX  |= (1<<RXOUTE);
  }

  if( !(UESTA0X & (1 << CFGOK)) ) // Check set up EP0
  {
    // Error
    UECONX &= ~(1<<EPEN); 
  }

  // Enable EP
  UECONX |= (1<<EPEN);
  UECONX |= (1<<STALLRQC);
  
  // Reset EP
  UERST |= (1<<(epAddr&0x0F));
  UERST  = 0x00; 

  UENUM = epTmp;
}

void USBdevice_Mcu::setStallEP (BYTE epAddr) 
{
  BYTE epTmp = UENUM;
  
  UENUM = epAddr & 0x0F;
  UECONX |= (1<<STALLRQ);
  UENUM = epTmp;
}

void USBdevice_Mcu::clrStallEP (BYTE epAddr) 
{
  BYTE epTmp = UENUM;

  UENUM = epAddr & 0x0F;
  UECONX |= (1<<STALLRQC);
  UENUM = epTmp;
}

void USBdevice_Mcu::clrNAK_EP (BYTE epAddr)
{
  nak[epAddr]=false;
  BYTE tmp = UENUM;
  
  UENUM = epAddr & 0x7F;
  UEINTX |= (1<<TXINI);
  UEINTX &= ~(1<<FIFOCON);
  UENUM = tmp;
}

WORD USBdevice_Mcu::readEP( BYTE  epAddr, 
                       BYTE *dataPtr, 
                       WORD  len )
{
  WORD cnt=0, n;

  BYTE uenum = UENUM;
  BYTE dummy;

  UENUM = epAddr & 0x07;

  cnt = UEBCLX;  

  for(n=0; n<cnt; n++)
  {
    if( n<len )
    dataPtr[n] = UEDATX; // read from FIFO
    else
      dummy = UEDATX;
  }
  
  //  Acknowledge setup request
  if(epAddr & 0x7F)
  {
    UEINTX &= ~(1<<RXOUTI);
    }
  else
   {
    UEINTX &= ~(1<<RXSTPI);
  }

  UEINTX &= ~(1<<FIFOCON);
  UENUM = uenum;
  return ((cnt<len)?cnt:len);
}

WORD USBdevice_Mcu::writeEP( BYTE  epAddr, 
                             BYTE *pData, 
                             WORD  cnt ) 
{
  BYTE uenum = UENUM;

  uint32_t n;
  
  UENUM = epAddr&0x7F;

  if( (epAddr&0x07F) == 0 )
  {
    if( cnt>0 )
      UEIENX |= (1<<TXINE);
    else
      UEIENX &= ~(1<<TXINE);
  }

  for(n=0;n<cnt;n++)
  {
    UEDATX = pData[n];
  }
 
  //  if( (epAddr&0x07F) == 0 )
  {
    UEINTX &= ~(1<<TXINI);
  }

  if( nak[epAddr&0x07F]==false)
  {
    UEINTX &= ~(1<<FIFOCON);
  }
  UENUM = uenum;

  return(cnt);
}
