==> ThBreuer/EmbSysLib/Src/Hardware/MCU/STM32F7xx/Src/USBdevice_Mcu.cpp <==
#include "USBdevice_Mcu.h"
#define USB_PCGCCTL    *(__IO DWORD             *)((DWORD)USB_OTG_FS + USB_OTG_PCGCCTL_BASE)
#define USB_DEVICE      ((USB_OTG_DeviceTypeDef *)((DWORD)USB_OTG_FS + USB_OTG_DEVICE_BASE ))

void USBdevice_Mcu::start(void)
{
  PinConfig::set( PinConfig::USB_OTG_FS_DM, PinConfig::NO_PUPD
                                       |PinConfig::HIGH_SPEED
                                       |PinConfig::PUSH_PULL );

  PinConfig::set( PinConfig::USB_OTG_FS_DP, PinConfig::NO_PUPD
                                       |PinConfig::HIGH_SPEED
                                       |PinConfig::PUSH_PULL);

  RCC->AHB2ENR |= RCC_AHB2ENR_OTGFSEN;              // Enable USB-FS clock

  NVIC_EnableIRQ( OTG_FS_IRQn );

  USB_OTG_FS->GAHBCFG &= ~USB_OTG_GAHBCFG_GINT;     // disable USB interrupts
  USB_OTG_FS->GUSBCFG |=  USB_OTG_GUSBCFG_PHYSEL;   // Select FS Embedded PHY
  CoreReset();                                      // Reset after a PHY select
                                                    // and set Host mode
//  USB_OTG_FS->GCCFG    = USB_OTG_GCCFG_PWRDWN       // Deactivate the power down
//                         | USB_OTG_GCCFG_VBDEN;     // VBUS detection enable

//USB_OTG_FS->GOTGCTL |=   USB_OTG_GOTGCTL_BVALOEN
//                       | USB_OTG_GOTGCTL_BVALOVAL;

  USB_OTG_FS->GCCFG    = USB_OTG_GCCFG_PWRDWN;       // Deactivate the power down

  USB_OTG_FS->GOTGCTL |=   USB_OTG_GOTGCTL_BVALOEN
                         | USB_OTG_GOTGCTL_BVALOVAL;

  USB_OTG_FS->GUSBCFG &= ~( USB_OTG_GUSBCFG_FHMOD   // Force Device Mode
                           |USB_OTG_GUSBCFG_FDMOD );
  USB_OTG_FS->GUSBCFG |=  ( USB_OTG_GUSBCFG_FDMOD );

  for (uint32_t i = 0; i < 15 ; i++)
  {
    USB_OTG_FS->DIEPTXF[i] = 0;
  }

  //  USB_OTG_FS->GCCFG |= USB_OTG_GCCFG_VBUSBSEN;    // Activate VBUS Sensing B
  //  USB_OTG_FS->GCCFG |= USB_OTG_GCCFG_NOVBUSSENS;  // No Vbus sensing
  USB_PCGCCTL        = 0;                         // Restart the Phy Clock

  // Device configuration
  USB_DEVICE->DCFG  |= ( (3 <<  0)   // Device speed: Full speed
                        |(0 << 11)); // Periodic frame interval: 80%

  // Flush the FIFO
  epIN [0].flush();
  epOUT[0].flush();

  // Clear all pending device interrupts
  USB_DEVICE->DIEPMSK  = 0;
  USB_DEVICE->DOEPMSK  = 0;
  USB_DEVICE->DAINT    = 0xFFFFFFFF;
  USB_DEVICE->DAINTMSK = 0;

  for (uint32_t i = 0; i < NUM_OF_ENDPOINTS; i++)
  {
    epIN[i].start();
    epOUT[i].start();
  }

  USB_DEVICE->DIEPMSK &= ~(USB_OTG_DIEPMSK_TXFURM);  //
  USB_OTG_FS->GINTMSK  = 0;                          // Disable all interrupts
  USB_OTG_FS->GINTSTS  = 0xBFFFFFFF;                 // Clear any pending interrupts

  USB_OTG_FS->GINTMSK |= USB_OTG_GINTMSK_RXFLVLM;    // Enable the common interrupts

  // Enable interrupts matching to the Device mode ONLY
  USB_OTG_FS->GINTMSK |= (  USB_OTG_GINTMSK_USBSUSPM
                          | USB_OTG_GINTMSK_USBRST
                          | USB_OTG_GINTMSK_ENUMDNEM
                          | USB_OTG_GINTMSK_IEPINT
                          | USB_OTG_GINTMSK_OEPINT
                          | USB_OTG_GINTMSK_WUIM );
  USB_OTG_FS->GINTMSK |= (  USB_OTG_GINTMSK_SRQIM
                          | USB_OTG_GINTMSK_OTGINT);

  USB_DEVICE->DCTL |= USB_OTG_DCTL_SDIS;             // disconnect

  // STM32F7xx ReferenceManual:
  // Device RxFIFO =   (4 * number of control endpoints + 6)    10
  //                 + ((largest USB packet used / 4)           16
  //                 + 1 for status information)                 1
  //                 + (2 * number of OUT endpoints)             6
  //                 + 1 for Global NAK                          1
  // size in DWORDs (32bit) !!!
  WORD offset = 0;
  USB_OTG_FS->GRXFSIZ            = (  128               ); offset  = 128; // set RX fifo size
  USB_OTG_FS->DIEPTXF0_HNPTXFSIZ = (( 32L << 16) | offset); offset += 32; // set TX 0 fifo size
  USB_OTG_FS->DIEPTXF[0]         = (( 32L << 16) | offset); offset += 32; // set TX 1 fifo size
  USB_OTG_FS->DIEPTXF[1]         = (( 32L << 16) | offset); offset += 32; // set TX 2 fifo size
  USB_OTG_FS->DIEPTXF[2]         = (( 32L << 16) | offset);               // set TX 3 fifo size

  USB_DEVICE->DCTL    &= ~USB_OTG_DCTL_SDIS;         // connect
  USB_OTG_FS->GAHBCFG |=  USB_OTG_GAHBCFG_GINT;      // enable USB interrupts
}

void USBdevice_Mcu::setAddress( BYTE adr )
{
  USB_DEVICE->DCFG &= ~USB_OTG_DCFG_DAD;
  USB_DEVICE->DCFG |=  USB_OTG_DCFG_DAD & (adr << 4);

  epIN[0].transmitZLP();
}

void USBdevice_Mcu::configEP( BYTE epAddr,
                         WORD epMaxPacketSize,
                         BYTE epType )
{
  BYTE epNum = epAddr&0x7F;

  if( epNum < NUM_OF_ENDPOINTS )
  {
    if( epAddr & 0x80 )
    {
      epIN[epNum].config( epMaxPacketSize, epType );
    }
    else
    {
      epOUT[epNum].config( epMaxPacketSize, epType );
    }

    clrStallEP( epAddr );
    setNAK_EP( epAddr );
    epIN[epNum].transmitZLP();
  }
}

void USBdevice_Mcu::setStallEP (BYTE epAddr)
{
  BYTE epNum = epAddr&0x7F;

  if( epNum < NUM_OF_ENDPOINTS )
  {
    if( epAddr & 0x80 )
    {
      epIN[epNum].setStall();
    }
    else
    {
      epOUT[epNum].setStall();
    }
  }
}

void USBdevice_Mcu::clrStallEP (BYTE epAddr)
{
  BYTE epNum = epAddr&0x7F;

  if( epNum < NUM_OF_ENDPOINTS )
  {
    if( epAddr & 0x80 )
      epIN[epNum].clrStall();
    else
      epOUT[epNum].clrStall();
  }
}

void USBdevice_Mcu::clrNAK_EP (BYTE epAddr)
{
BYTE  num = epAddr & 0x07;
if( epAddr & 0x80 )
  epIN[num].clrNAK();
else
  epOUT[num].clrNAK();
}

WORD USBdevice_Mcu::readEP( BYTE  epAddr,
                       BYTE *dataPtr,
                       WORD  len )
{
  BYTE epNum = epAddr&0x7F;

  if( epNum < NUM_OF_ENDPOINTS )
  {
    return( epOUT[epNum].read( dataPtr, len ) );
  }
  return( 0 );
}

WORD USBdevice_Mcu::writeEP( BYTE  epAddr,
                        BYTE *dataPtr,
                        WORD  len )
{
  BYTE epNum = epAddr&0x7F;

  if( epNum < NUM_OF_ENDPOINTS )
  {
    return( epIN[epNum].write( dataPtr, len ) );
  }
  return( 0 );
}
